Finished update page.
