# res/openapi.yml
@@ -20,7 +20,7 @@ paths:
           schema:
             type: string
             enum: ["popularity", "name", "date", "category", "venue", "organiser"]
-        - name: "sort"
+        - name: "order"
           in: query
           required: false
           description: "Determines the sort order."
@@ -117,6 +117,8 @@ paths:
           $ref: "#/components/responses/Unauthenticated"
         403:
           $ref: "#/components/responses/Unauthorized"
+        500:
+          $ref: "#/components/responses/FieldError"
       security:
         - cookieAuth: []
   /event/{id}:
@@ -139,6 +141,49 @@ paths:
           $ref: "#/components/responses/Unauthenticated"
         403:
           $ref: "#/components/responses/Unauthorized"
+      security:
+        - cookieAuth: []
+    patch:
+      operationId: "patchEvent"
+      summary: "Patches an existing event."
+      description: "A user must be authenticated to use this method, and have the role of organiser."
+      parameters:
+        - name: "id"
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Event/properties/id'
+      requestBody:
+        description: "The fields to patch."
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                category:
+                  type: string
+                  enum: ["sport", "culture", "other"]
+                date:
+                  type: string
+                  format: date
+                organiser:
+                  type: string
+                venue:
+                  type: string
+      responses:
+        200:
+          $ref: "#/components/responses/SingleEvent"
+        401:
+          $ref: "#/components/responses/Unauthenticated"
+        403:
+          $ref: "#/components/responses/Unauthorized"
+        500:
+          $ref: "#/components/responses/FieldError"
       security:
         - cookieAuth: []
     delete:
@@ -271,6 +316,43 @@ components:
             properties:
               message:
                 type: string
+    FieldError:
+      description: "An error occurred whilst validating the schema fields."
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+              errors:
+                type: object
+                properties:
+                  name:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                  description:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                  category:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                  date:
+                    type: object
+                    properties:
+                      message:
+                        type: string
+                  venue:
+                    type: object
+                    properties:
+                      message:
+                        type: string
   schemas:
     Event:
       type: object
